syntax = "proto3";

package book_service;
option go_package="genproto/book_service";
import "google/protobuf/struct.proto";

message Book {
    string id = 1;
    string isbn = 2;
    string title = 3;
    string cover = 4;
    string author = 5;
    string published = 6;
    int32 pages = 7;
    int32 status = 8; // 0-new, 1-reading, 2-finished,
    string created_at = 9;
    string updated_at = 10;
}

message CreateBook {
    string isbn = 1;
    string title = 2;
    string cover = 3;
    string author = 4;
    string published = 5;
    int32 pages = 7;
    int32 status = 8; // 0-new, 1-reading, 2-finished,
}

message UpdateBook {
    string id = 1;
    string isbn = 2;
    string title = 3;
    string cover = 4;
    string author = 5;
    string published = 6;
    int32 pages = 7;
    int32 status = 8; // 0-new, 1-reading, 2-finished,
}

message UpdatePatchBook {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message BookPK {
    string id = 1;
}

message BookByTitle {
    string title =1;
}

message BookListRequest{
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message BookListResponse {
    int32 count = 1;
    repeated Book books = 2;
}